chore: Add CodeEditor component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -77,6 +77,9 @@
       "@scrapper-gate/frontend/block-editor": [
         "libs/frontend/block-editor/src/index.ts"
       ],
+      "@scrapper-gate/frontend/code-editor": [
+        "libs/frontend/code-editor/src/index.ts"
+      ],
       "@scrapper-gate/frontend/common": ["libs/frontend/common/src/index.ts"],
       "@scrapper-gate/frontend/data-grid": [
         "libs/frontend/data-grid/src/index.ts"
