--- a/deploy/package.json
+++ b/deploy/package.json
@@ -4,8 +4,9 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/pulumi": "^3.0.0",
+        "@monaco-editor/react": "^4.3.1",
         "@pulumi/aws": "^4.0.0",
-        "@pulumi/awsx": "^0.30.0"
+        "@pulumi/awsx": "^0.30.0",
+        "@pulumi/pulumi": "^3.0.0"
     }
 }
