--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "npm:@mui/material@5.0.6",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@monaco-editor/react": "^4.3.1",
     "@mui/icons-material": "5.0.4",
     "@mui/lab": "5.0.0-alpha.53",
     "@mui/material": "5.0.6",
@@ -285,4 +286,3 @@
     ]
   }
 }
-
