--- a/package.json
+++ b/package.json
@@ -96,10 +96,12 @@
     "lodash.lowercase": "^4.3.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.set": "^4.3.2",
+    "monaco-editor": "^0.30.0",
     "node-fetch": "^3.0.0",
     "notistack": "^2.0.2",
     "p-limit": "^3.1.0",
     "p-pipe": "^3.1.0",
+    "p-queue": "^7.1.0",
     "pg": "^8.5.1",
     "playwright": "1.16.3",
     "playwright-core": "1.16.3",
@@ -233,6 +235,7 @@
     "matcher": "^4.0.0",
     "mockzilla": "^0.12.0",
     "mockzilla-webextension": "^0.13.0",
+    "monaco-editor-webpack-plugin": "^6.0.0",
     "ora": "^6.0.1",
     "prettier": "2.3.2",
     "serverless": "2.58.0",
