--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tshio/security-client": "^0.0.20",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "apollo-link-rest": "^0.8.0-beta.0",
+    "apollo-link-scalars": "^3.0.0",
     "apollo-server-fastify": "3.3.0",
     "awilix": "^4.3.3",
     "aws-sdk": "^2.935.0",
