--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "graphql-tools": "^4.0.8",
     "highlight-words-core": "^1.2.2",
     "http-status-codes": "^2.1.4",
-    "joiful": "^3.0.2",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
@@ -158,19 +158,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "13.1.3",
-    "@nrwl/cypress": "13.1.3",
-    "@nrwl/eslint-plugin-nx": "13.1.3",
-    "@nrwl/express": "13.1.3",
-    "@nrwl/jest": "13.1.3",
-    "@nrwl/linter": "13.1.3",
-    "@nrwl/node": "13.1.3",
-    "@nrwl/nx-cloud": "12.5.2",
-    "@nrwl/react": "13.1.3",
-    "@nrwl/storybook": "13.1.3",
-    "@nrwl/tao": "13.1.3",
-    "@nrwl/web": "13.1.3",
-    "@nrwl/workspace": "13.1.3",
+    "@nrwl/cli": "13.2.2",
+    "@nrwl/cypress": "13.2.2",
+    "@nrwl/eslint-plugin-nx": "13.2.2",
+    "@nrwl/express": "13.2.2",
+    "@nrwl/jest": "13.2.2",
+    "@nrwl/linter": "13.2.2",
+    "@nrwl/node": "13.2.2",
+    "@nrwl/nx-cloud": "12.5.4",
+    "@nrwl/react": "13.2.2",
+    "@nrwl/storybook": "13.2.2",
+    "@nrwl/tao": "13.2.2",
+    "@nrwl/web": "13.2.2",
+    "@nrwl/workspace": "13.2.2",
     "@playwright/test": "^1.12.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
@@ -290,3 +290,4 @@
     ]
   }
 }
+
