--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,24 +29,41 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: "setup buildx"
+        uses: docker/setup-buildx-action@v1
+
+      - name: "cache docker layers"
+        uses: actions/cache@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-      - name: Get branch name
-        id: branch-name
-        uses: tj-actions/branch-names@v5
+      - name: "docker meta"
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ github.repository }}
+          tags: latest
 
-      - name: Create base image tag
-        run: echo "BASE_IMAGE_TAG=$(echo ${{steps.branch-name.outputs.current_branch}} | tr / -)" >> $GITHUB_ENV
+      - name: "docker build"
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=docker,dest=/tmp/docker.tar
+          push: false
+          cache-from: type=gha, scope=${{ github.workflow }}
+          cache-to: type=gha, scope=${{ github.workflow }}
+          file: docker/base/Dockerfile
 
-      - name: Maybe build base image
-        run: |
-          docker build -f ./docker/base/Dockerfile -t ghcr.io/theunderscorer/scrapper-gate-base:${{env.BASE_IMAGE_TAG}} .
-          docker push ghcr.io/theunderscorer/scrapper-gate-base:${{env.BASE_IMAGE_TAG}}
+      - name: "docker artifacts"
+        uses: actions/upload-artifact@v2
+        with:
+          name: docker
+          path: /tmp/docker.tar
 
   build:
     needs:
@@ -235,12 +252,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: "download docker artifacts"
+        uses: actions/download-artifact@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          name: docker
+          path: /tmp
+
+      - name: "load base image"
+        run: |
+          docker load --input /tmp/docker.tar
+          docker image ls -a
 
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
@@ -278,19 +299,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: "download docker artifacts"
+        uses: actions/download-artifact@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          name: docker
+          path: /tmp
 
-      - name: Get branch name
-        id: branch-name
-        uses: tj-actions/branch-names@v5
-
-      - name: Create base image tag
-        run: echo "BASE_IMAGE_TAG=$(echo ${{steps.branch-name.outputs.current_branch}} | tr / -)" >> $GITHUB_ENV
+      - name: "load base image"
+        run: |
+          docker load --input /tmp/docker.tar
+          docker image ls -a
 
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
