--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ github.repository }}
+          images: scrapper-gate-base
           tags: latest
 
       - name: "docker build"
@@ -157,13 +157,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
         with:
@@ -252,17 +245,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: "download docker artifacts"
-        uses: actions/download-artifact@v2
-        with:
-          name: docker
-          path: /tmp
-
-      - name: "load base image"
-        run: |
-          docker load --input /tmp/docker.tar
-          docker image ls -a
-
       - name: Set Node.js 16.x
         uses: actions/setup-node@v2
         with:
@@ -270,7 +252,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: sudo docker-compose up -d
+        run: sudo docker compose up -d
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
@@ -299,6 +281,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: "setup buildx"
+        uses: docker/setup-buildx-action@v1
+
+      - name: "cache docker layers"
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: "download docker artifacts"
         uses: actions/download-artifact@v2
         with:
@@ -317,7 +310,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: sudo docker-compose up -d
+        run: sudo docker compose up -d
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
