--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -281,20 +281,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: "cache docker layers"
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: "download docker artifacts"
-        uses: actions/download-artifact@v2
-        with:
-          name: docker
-          path: /tmp
-
       - name: "load base image"
         run: |
           docker load --input /tmp/docker.tar
@@ -319,6 +305,23 @@ jobs:
         run: cd deploy && pulumi login --local && pulumi stack init development && pulumi stack select development && pulumi up -y
         env:
           PULUMI_CONFIG_PASSPHRASE: test
+
+      - name: "setup buildx"
+        uses: docker/setup-buildx-action@v1
+
+      - name: "cache docker layers"
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: "download docker artifacts"
+        uses: actions/download-artifact@v2
+        with:
+          name: docker
+          path: /tmp
 
       - name: Setup env
         run: cp .local.env.dist .local.env
