--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,7 +24,7 @@ services:
   api:
     networks:
       - app
-    command: [sh, -c, "node apps/api/src/main.js"]
+    command: [sh, -c, "node main.js"]
     healthcheck:
       test: [CMD, "curl", "-f", "http://localhost:3000/health"]
       interval: 1m30s
