--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -175,15 +175,18 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
-      - name: Start pulumi
-        run: cd deploy && pulumi login --local && pulumi stack init development && pulumi stack select development && pulumi up -y
-        env:
-          PULUMI_CONFIG_PASSPHRASE: test
+      - uses: pulumi/actions@v3
+        name: Start pulumi
+        with:
+          command: up
+          stack-name: development
+          work-dir: deploy
+          cloud-url: local
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -255,15 +258,18 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
-      - name: Start pulumi
-        run: cd deploy && pulumi login --local && pulumi stack init development && pulumi stack select development && pulumi up -y
-        env:
-          PULUMI_CONFIG_PASSPHRASE: test
+      - uses: pulumi/actions@v3
+        name: Start pulumi
+        with:
+          command: up
+          stack-name: development
+          work-dir: deploy
+          cloud-url: local
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -291,7 +297,7 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
@@ -336,8 +342,6 @@ jobs:
 
       - name: Test
         run: npx nx run browser-extension-e2e:e2e-docker
-        env:
-          VERSION: ${{env.BASE_IMAGE_TAG}}
 
       - name: Write API logs
         run: docker compose -f docker compose.prod.yml logs api > api-logs.log
