Revert "ci: Remove pulumi token"
This reverts commit 2ac3680d105ce20add000a76e789421583734c83.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -188,6 +188,7 @@ jobs:
           work-dir: deploy
           cloud-url: local
         env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
 
       - name: Setup env
@@ -273,6 +274,7 @@ jobs:
           work-dir: deploy
           cloud-url: local
         env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
 
       - name: Setup env
@@ -314,7 +316,7 @@ jobs:
           work-dir: deploy
           cloud-url: local
         env:
-
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
 
       - name: "setup buildx"
