--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -175,7 +175,7 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
@@ -314,10 +314,19 @@ jobs:
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
-      - name: Start pulumi
-        run: cd deploy && pulumi login --local && pulumi stack init development && pulumi stack select development && pulumi up -y
+      - uses: pulumi/actions@v3
+        name: Start pulumi
+        with:
+          command: up
+          stack-name: development-e2e
+          work-dir: deploy
+          cloud-url: local
+          upsert: true
         env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
 
       - name: "setup buildx"
         uses: docker/setup-buildx-action@v1
