--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -258,7 +258,7 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
@@ -266,19 +266,10 @@ jobs:
       - name: Copy pulumi config
         run: cp deploy/Pulumi.development.yaml deploy/Pulumi.development-apps.yaml
 
-      - uses: pulumi/actions@v3
-        name: Start pulumi
-        with:
-          command: up
-          stack-name: development-apps
-          work-dir: deploy
-          cloud-url: local
-          upsert: true
+      - name: Start pulumi
+        run: cd deploy && pulumi login --local && pulumi stack init development-apps && pulumi stack select development-apps && pulumi up -y
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
-          AWS_ACCESS_KEY_ID: test
-          AWS_SECRET_ACCESS_KEY: test
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -306,7 +297,7 @@ jobs:
         run: sudo docker compose up -d
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy
+        run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
 
       - name: Wait for localstack
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
@@ -314,19 +305,10 @@ jobs:
       - name: Copy pulumi config
         run: cp deploy/Pulumi.development.yaml deploy/Pulumi.development-e2e.yaml
 
-      - uses: pulumi/actions@v3
-        name: Start pulumi
-        with:
-          command: up
-          stack-name: development-e2e
-          work-dir: deploy
-          cloud-url: local
-          upsert: true
+      - name: Start pulumi
+        run: cd deploy && pulumi login --local && pulumi stack init development-e2e && pulumi stack select development-e2e && pulumi up -y
         env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           PULUMI_CONFIG_PASSPHRASE: test
-          AWS_ACCESS_KEY_ID: test
-          AWS_SECRET_ACCESS_KEY: test
 
       - name: "setup buildx"
         uses: docker/setup-buildx-action@v1
