ci: Change apps stack name

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -264,10 +264,10 @@ jobs:
         run: sudo AWS_S3_ENDPOINT=http://localhost:4566 node docker/localstack/waitForLocalStack.mjs
 
       - name: Copy pulumi config
-        run: cp deploy/Pulumi.development.yaml deploy/Pulumi.development-apps.yaml
+        run: cp deploy/Pulumi.development.yaml deploy/Pulumi.development-apps-tests.yaml
 
       - name: Start pulumi
-        run: cd deploy && pulumi login --local && pulumi stack init development-apps && pulumi stack select development-apps && pulumi up -y
+        run: cd deploy && pulumi login --local && pulumi stack init development-apps-tests && pulumi stack select development-apps-tests && pulumi up -y
         env:
           PULUMI_CONFIG_PASSPHRASE: test
 
