--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "aws-sdk": "^2.935.0",
     "chrome-aws-lambda": "^10.0.0",
     "classnames": "^2.3.1",
+    "cockatiel": "^3.0.0-beta.0",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
     "dataloader": "^2.0.0",
@@ -290,4 +291,3 @@
     ]
   }
 }
-
