chore: Update ignore flags

--- a/deploy/Pulumi.development.yaml
+++ b/deploy/Pulumi.development.yaml
@@ -12,3 +12,5 @@ config:
   aws:secretKey: test
   aws:skipCredentialsValidation: "true"
   aws:skipRequestingAccountId: "true"
+  aws:skipMetadataApiCheck: "true"
+  aws:skipGetEc2Platforms: "true"
