--- a/deploy/package.json
+++ b/deploy/package.json
@@ -4,8 +4,8 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/aws": "^4.0.0",
-        "@pulumi/awsx": "^0.30.0",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/aws": "4.30.0",
+        "@pulumi/awsx": "0.32.0",
+        "@pulumi/pulumi": "3.19.0"
     }
 }
