--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack@sha256:1fee24851b25eb1426cbdd2c9a6ea3b4a9ed43209096e20f8556cb0473532a24
     networks:
       - app
     volumes:
