--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -134,7 +134,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -172,7 +172,7 @@ jobs:
       - uses: leonardodino/setup-playwright@main
 
       - name: Start docker
-        run: sudo docker-compose up -d
+        run: sudo docker compose up -d
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
@@ -225,7 +225,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Setup env
         run: cp .local.env.dist .local.env
@@ -255,7 +255,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: sudo docker-compose up -d
+        run: sudo docker compose up -d
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
@@ -294,7 +294,7 @@ jobs:
           cache: 'npm'
 
       - name: Start docker
-        run: sudo docker-compose up -d
+        run: sudo docker compose up -d
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps && npm i ts-node -g && npm run build:tools && npm ci --prefix deploy && curl -fsSL https://get.pulumi.com | sh
