chore: add semver config per project

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "release:dry": "npx semantic-release -d",
     "typecheck": "tsc --noEmit -p tsconfig.base.json",
     "start-local-env": "node scripts/startLocalEnv.mjs",
-    "stop-local-env": "cd deploy && pulumi stack select development && pulumi destroy -y && cd .. && docker compose down -v"
+    "stop-local-env": "cd deploy && pulumi stack select development && pulumi destroy -y && cd .. && docker compose down -v",
+    "prepare": "husky install"
   },
   "private": true,
   "sideEffects": false,
@@ -150,6 +151,8 @@
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "7.15.0",
     "@babel/runtime": "7.15.4",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-angular": "^15.0.0",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "@graphql-codegen/add": "^2.0.2",
@@ -159,6 +162,7 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
+    "@jscutlery/semver": "^2.14.3",
     "@nrwl/cli": "13.2.2",
     "@nrwl/cypress": "13.2.2",
     "@nrwl/eslint-plugin-nx": "13.2.2",
@@ -231,6 +235,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.2",
     "fs-extra": "^10.0.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "jest-image-snapshot": "^4.5.1",
     "jest-mock-proxy": "^3.0.0",
