--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,16 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
-      - name: Build
-        run: npm run build:tools && npx nx build && npx nx build api
+      - name: Prerelease
+        if: github.ref == 'refs/heads/test'
+        run: nx affected --target=version --base=test --head=HEAD --push --releaseAs=prerelease
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
-        run: npm run release
+        if: github.ref == 'refs/heads/master'
+        run: nx affected --target=version --base=master --head=HEAD --push
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
