--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,14 +36,28 @@ jobs:
 
       - name: Prerelease
         if: github.ref == 'refs/heads/test'
-        run: nx affected --target=version --base=test --head=HEAD --push --releaseAs=prerelease --baseBranch test
+        run: nx affected --target=version --base=test --head=HEAD --releaseAs=prerelease --baseBranch test
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push prerelease
+        if: github.ref == 'refs/heads/test'
+        run: git push --follow-tags origin test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
         if: github.ref == 'refs/heads/master'
-        run: nx affected --target=version --base=master --head=HEAD --push --baseBranch master
+        run: nx affected --target=version --base=master --head=HEAD --baseBranch master
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push release
+        if: github.ref == 'refs/heads/master'
+        run: git push --follow-tags origin master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
