--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -7,8 +7,13 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["polyfills.js", "content.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "polyfills.js",
+        "content.js"
+      ]
     }
   ],
   "background": {
@@ -26,11 +31,20 @@
     "background",
     "scripting"
   ],
-  "host_permissions": ["*://*/*"],
+  "host_permissions": [
+    "*://*/*"
+  ],
   "web_accessible_resources": [
     {
-      "resources": ["*.js", "*.json", "*.map", "index.html"],
-      "matches": ["*://*/*"]
+      "resources": [
+        "*.js",
+        "*.json",
+        "*.map",
+        "index.html"
+      ],
+      "matches": [
+        "*://*/*"
+      ]
     }
   ]
 }
