--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Prerelease
         if: github.ref == 'refs/heads/test'
-        run: npx nx run-many --target=version --releaseAs=prerelease --baseBranch test
+        run: npx nx run-many --target=version --all --releaseAs=prerelease --baseBranch test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -50,7 +50,7 @@ jobs:
 
       - name: Release
         if: github.ref == 'refs/heads/master'
-        run: npx nx run-many --target=version --baseBranch master
+        run: npx nx run-many --target=version --all --baseBranch master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
