--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Scrapper Gate",
-  "version": "0.0.1-0",
+  "version": "1.0.0",
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html#/popup"
