--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,14 @@ jobs:
 
       - name: Prerelease
         if: github.ref == 'refs/heads/test'
-        run: npx nx run-many --target=version --all --maxParallel=1 --configuration=prerelease --push
+        run: npx nx run-many --target=version --all --maxParallel=1 --configuration=prerelease
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push prerelease
+        if: github.ref == 'refs/heads/test'
+        run: git push --follow-tags origin test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -44,6 +51,13 @@ jobs:
       - name: Release
         if: github.ref == 'refs/heads/master'
         run: npx nx run-many --target=version --all --maxParallel=1
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push release
+        if: github.ref == 'refs/heads/master'
+        run: git push --follow-tags origin master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
