--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Push prerelease
         if: github.ref == 'refs/heads/test'
-        run: git push --follow-tags origin test
+        run: git push --follow-tags --atomic origin test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -57,7 +57,7 @@ jobs:
 
       - name: Push release
         if: github.ref == 'refs/heads/master'
-        run: git push --follow-tags origin master
+        run: git push --follow-tags --atomic origin master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
