--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "@nrwl/web": "13.2.2",
     "@nrwl/workspace": "13.2.2",
     "@playwright/test": "^1.12.0",
+    "@semantic-release/exec": "^6.0.2",
     "@storybook/addon-actions": "6.3.8",
     "@storybook/addon-docs": "6.3.8",
     "@storybook/addon-essentials": "6.3.8",
@@ -185,6 +186,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "^13.1.1",
+    "@theunderscorer/nx-semantic-release": "1.0.3",
     "@types/aws-lambda": "^8.10.77",
     "@types/chrome": "^0.0.134",
     "@types/dagre": "^0.7.44",
