--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,12 @@
         "target": "build",
         "projects": "dependencies"
       }
+    ],
+    "version": [
+      {
+        "target": "version",
+        "projects": "dependencies"
+      }
     ]
   },
   "cli": {
