--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["@commitlint/config-angular"],
   "rules": {
+    "header-max-length": [2, "always", 100],
     "type-enum": [
       2,
       "always",
