chore: remove build targets

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0-test.1",
-  "private": true
+  "private": true,
+  "repository": {
+    "url": "https://github.com/TheUnderScorer/scrapper-gate",
+    "type": "git"
+  }
 }
