--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -1,5 +1,9 @@
 {
   "name": "browser-extension",
   "version": "0.0.1-0",
-  "private": true
+  "private": true,
+  "repository": {
+    "url": "https://github.com/TheUnderScorer/scrapper-gate",
+    "type": "git"
+  }
 }
