--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-test.1",
   "private": true,
   "repository": {
-    "url": "https://github.com/TheUnderScorer/scrapper-gate",
+    "url": "https://github.com/TheUnderScorer/scrapper-gate.git",
     "type": "git"
   }
 }
